manifest/game of life/gameoflife-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: gameoflife-pod
spec:
  containers:
   - name: gameoflife
     image: venu1212/gameoflife:DON
     ports:
     - containerPort: 8080
       protocol: TCP
