manifest/game of life/gameoflife-lb.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: gameoflife-svc
spec:
  type: LoadBalancer
  selector:
    app: gameoflife
  ports:
    - name: webport
      port: 35000
      targetPort: 8080
